<resources>
    <string name="timeout_message">Limited or no internet connectivity</string>
    <string name="email_us">Questions or Feedback?\nSend us an email at team@fitsby.com.</string>
    <string name="twitter_consumer_key">bU4k6Hx7NH1VA4lHFsTTg</string>
    <string name="twitter_consumer_secret">1yZkykC1lbLkpYsBSG8zldqcM4ulL3eULWPTmO4jQ</string>
    <string name="twitter_access_token">546435692-vjMam22IOKkYL3SiY7AVUsfTqU2VjBa3VvTWcd8</string>
    <string name="twitter_access_token_secret">8zSFoHJv6zCO8YTiFOToRrjhvvfrMgRn9wXkQrTf1c</string>
    <string name="app_id">426803977352349</string>
    <string name="gcm_sender_id">979881390942</string>
    <string name="motto">Stay motivated to work out.</string>
    <string name="or"> OR </string>
    <string name="app_name">Fitsby</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_register"></string>
    <string name="register_email_hint">Email</string>
    <string name="register_password_hint">Password (6 characters minimum)</string>
    <string name="register_confirm_password_hint">Confirm Password</string>
    <string name="register_button_register">Join Fitsby</string>
    <string name="title_activity_example"></string>
    <string name="title_activity_landing">Fitsby</string>
    <string name="login_text">"Log in to your Fitsby account</string>
    <string name="register_text">By creating a Fitsby account, you agree to our</string>
    <string name="landing_login">Log In</string>
    <string name="landing_start">Get Started</string>
    <string name="register_first_name_hint">First Name</string>
    <string name="register_last_name_hint">Last Name</string>
    <string name="title_activity_login"></string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button_login">Log In</string>
    <string name="login_forgot_password_text">Forgot your password?</string>
    <string name="fitsby_description">Fitsby is a game where you compete with other people on who can check in at the gym the most. \n \n
  									  You can play against anyone, including friends, and even wager money. \n \n
  									  Everytime you go to the gym, use GPS to check in. Check out after 30 minutes to make it count. \n \n
									  Press Next to get started!</string>
    <string name="title_activity_help"></string>
    <string name="help_button_text">Next</string>
    <string name="title_activity_league_landing"></string>
    <string name="league_landing_create_text">Create A Game</string>
    <string name="league_landing_join_text">Join A Public Game</string>
    <string name="title_activity_league_create"></string>
    <string name="league_create_create_text">Create Game</string>
    <string name="league_create_tv_wager_text">1. Set the wager:</string>
    <string name="league_create_tv_days_text">2. Set the days:</string>
    <string name="league_create_tv_goals_text">3. Set the gym goal:</string>
    <string name="league_create_ib_wager_plus">+</string>
    <string name="league_create_ib_wager_minus">-</string>
    <string name="league_create_ib_days_minus">-</string>
    <string name="league_create_ib_days_plus">+</string>
    <string name="credit_card_main_directions_text">"In order to start this game, you must commit to pay a wager amount if you do not reach the gym goal. Please enter your credit card information below (all payments are safely secured by Stripe Payments and you will never be charged unless you lose a game)."</string>
    <string name="credit_card_number_text">Card Number:</string>
    <string name="credit_card_expiration_text">Expiration Date:</string>
    <string name="credit_card_cvc_text">CVC:</string>
    <string name="credit_card_wager_text">Wager:</string>
    <string name="title_activity_credit_card"></string>
    <string name="credit_card_button_submit_text">Submit</string>
    <string name="credit_card_et_card_cvc_hint">"123 "</string>
    <string name="credit_card_et_card_number_hint">"Required    "</string>
    <string name="credit_card_et_expire_year_hint">"YYYY "</string>
    <string name="credit_card_et_expire_month_hint">"MM "</string>
    <string name="thirty_cents_charge_text">plus a 50&#162; processing fee</string>
    <string name="authorize_api_login_id">3C29upX37b</string>
    <string name="authorize_api_transaction_key">97925saQZfMX5J4C</string>
    <string name="title_activity_friend_invite"></string>
    <string name="friend_invite_button_invite_text">Search Contacts List</string>
    <string name="friend_invite_button_home_text">GO TO GAME</string>
    <string name="or_invite_them_later_text">Or you can invite them later and...</string>
    <string name="add_friend_button">Add Friend</string>
    <string name="invite_friends_directions">INVITE FRIENDS TO JOIN YOUR CURRENT GAME</string>
    <string name="invite_friends_directions2">INVITE FRIENDS TO JOIN FITSBY</string>
    <string name="title_activity_league_join"></string>
    <string name="league_join_et_first_name_hint">Game Host\'s First Name</string>
    <string name="league_join_et_invite_code_hint">Game ID</string>
    <string name="league_join_button_submit_text">Submit Search</string>
    <string name="league_join_button_create">Create Game</string>
    <string name="league_join_public_header_text">JOIN A PUBLIC GAME</string>
    <string name="search_for_a_game">SEARCH FOR A GAME</string>
    <string name="create_new_game_directions">Don\'t see a game you like? Start your own.</string>
    <string name="league_create_privacy_text">4. Make game private?</string>
    <string name="league_create_checkbox_text">"Yes"</string>
    <string name="league_create_rb_prompt">3. How many winners?</string>
    <string name="league_create_rb_top3">"Top 3"</string>
    <string name="league_create_rb_takeall">"Winner Takes All"</string>
    <string name="navigation_textview_me_text">Me</string>
    <string name="navigation_textview_game_text">GAMES</string>
    <string name="navigation_textview_newsfeed_text">NEWSFEED</string>
    <string name="navigation_textview_checkin_text">CHECK IN</string>
    <string name="check_in_button_check_in_text">CHECK IN</string>
    <string name="check_in_button_check_out_text">CHECK OUT</string>
    <string name="verified_gym">Currently not checked in at a gym</string>
    <string name="checkout_directions"></string>
    <string name="colon">:</string>
    <string name="seconds">00</string>
    <string name="minutes">00</string>
    <string name="title_activity_games"></string>
    <string name="title_activity_newsfeed"></string>
    <string name="title_activity_check_in"></string>
    <string name="title_activity_me"></string>
    <string name="me_reset_password">Change Password</string>
    <string name="me_imageview_desc">me_imageview_desc</string>
    <string name="me_textview_join_date_text">Date Joined: </string>
    <string name="me_textview_name_text"></string>
    <string name="me_textview_total_money_earned_money_text"></string>
    <string name="me_textview_total_money_earned_prompt_text">Total Money Earned: </string>
    <string name="me_textview_total_checkins_text"></string>
    <string name="me_textview_total_checkins_prompt_text">"Total Gym Check-ins: "</string>
    <string name="me_textview_total_gym_time_text"></string>
    <string name="me_textview_total_gym_time_prompt_text">Total Gym Minutes: </string>
    <string name="me_settings_checkin_tutorial_button">Check-In Tutorial</string>
    <string name="me_settings_tv_change_picture_link_text">Go to Gravatar.com</string>
    <string name="me_settings_tv_add_gym_text">Add Gym On Map:</string>
    <string name="me_settings_tv_add_gym_link_text">Add gym</string>
    <string name="newsfeed_button_submit_text">"     Submit     "</string>
    <string name="newsfeed_et_comment_hint">Post a status or leave a comment here</string>
    <string name="games_duration_prompt_text">"DURATION"</string>
    <string name="games_wager_prompt_text">"WAGER "</string>
    <string name="games_player_prompt_text">"PLAYERS "</string>
    <string name="games_pot_prompt_text">"GOAL "</string>
    <string name="games_start_date_prompt_text">START DATE</string>
    <string name="games_end_date_prompt_text">END DATE</string>
    <string name="games_leader_prompt_text"></string>
    <string name="games_button_newgame_text">Join New Game</string>
    <string name="games_no_games_prompt_text">Looks like you\'re not in any games! Tap the \'New Game\' button on the bottom right to join a game.</string>
    <string name="input_pot"></string>
    <string name="input_duration"></string>
    <string name="input_players"></string>
    <string name="input_wager"></string>
    <string name="input_date"></string>
    <string name="input_end_date"></string>
    <string name="days_left_prompt">"Days Left: "</string>
    <string name="days_left"></string>
    <string name="list_item_game_leader_name">Name</string>
    <string name="forfeit_game_button">Forfeit Game</string>
    <string name="invite_friends_button">INVITE FRIENDS</string>
    <string name="public_leagues_league_id_header_text">Game ID</string>
    <string name="public_leagues_players_header_text">Players</string>
    <string name="public_leagues_wager_header_text">Wager</string>
    <string name="public_leagues_duration_header_text">Days</string>
    <string name="public_leagues_pot_header_text">Goal</string>
    <string name="league_join_detail_header_text">"GAME DETAILS"</string>
    <string name="league_join_detail_type_text">"TYPE: "</string>
    <string name="league_join_detail_wager_text">"WAGER "</string>
    <string name="league_join_detail_pot_text">"GOAL "</string>
    <string name="league_join_detail_players_text">"PLAYERS "</string>
    <string name="league_join_detail_button_join_text">Join Game</string>
    <string name="list_item_public_leagues_id_text">#1</string>
    <string name="list_item_public_leagues_players_text">4</string>
    <string name="list_item_public_leagues_wager_text">10</string>
    <string name="list_item_public_leagues_duration_text">2</string>
    <string name="list_item_public_leagues_pot_text">20</string>
    <string name="list_item_newsfeed_first_name_text">Brent</string>
    <string name="list_item_newsfeed_last_name_text">Hronik</string>
    <string name="list_item_newsfeed_timestamp_text">Now</string>
    <string name="list_item_newsfeed_message_text">This is a comment.</string>
    <string name="league_create_wager_text">0</string>
    <string name="league_create_days_text">14</string>
    <string name="league_create_ib_days_minus_text">Decrement days</string>
    <string name="league_create_ib_days_plus_text">Increment days</string>
    <string name="league_create_ib_wager_minus_text">Decrement wager</string>
    <string name="league_create_ib_wager_plus_text">Increment days</string>
    <string name="me_settings_tv_change_email_text">Change Email: </string>
    <string name="me_settings_et_change_email_hint">Enter a new email</string>
    <string name="me_settings_tv_change_password_text">Change Password (coming soon): </string>
    <string name="me_settings_et_old_password_hint">Current Password</string>
    <string name="me_settings_et_new_password_hint">New Password</string>
    <string name="me_settings_et_new_password_confirm_hint">Confirm New password</string>
    <string name="me_settings_button_submit_text">Submit Changes</string>
    <string name="me_settings_button_logout_text">Log Out</string>
    <string name="me_settings_tv_change_picture_text">Change Profile Picture: </string>
    <string name="me_settings_button_change_picture_text">Choose picture</string>
    <string name="fragment_walking_start_button">Start Walking</string>
    <string name="fragment_walking_tv">0</string>
    <string name="fragment_walking_stop_button">Stop Walking</string>
</resources>