<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/league_create_tv_wager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/league_create_tv_wager_text" />

    <ImageButton 
        android:id="@+id/league_create_ib_wager_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/league_create_tv_wager" 
        android:contentDescription="@string/league_create_ib_wager_plus_text" />
    
    <TextView
        android:id="@+id/league_create_wager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/league_create_ib_wager_plus"
        android:text="@string/league_create_wager_text" />
    
    <ImageButton 
        android:id="@+id/league_create_ib_wager_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/league_create_wager" 
        android:contentDescription="@string/league_create_ib_wager_minus_text" />	
        
    <TextView
        android:id="@+id/league_create_tv_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/league_create_tv_days_text" />

    <ImageButton 
        android:id="@+id/league_create_ib_days_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/league_create_tv_days" 
        android:contentDescription="@string/league_create_ib_days_plus_text"/>
    
    <TextView
        android:id="@+id/league_create_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/league_create_ib_days_plus"
        android:text="@string/league_create_days_text" />
    
    <ImageButton 
        android:id="@+id/league_create_ib_days_minus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/league_create_days" 
        android:contentDescription="@string/league_create_ib_days_minus_text"/>
    
    <Button
        android:id="@+id/league_create_button_create"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:text="@string/league_create_create_text" />

    <CheckBox
        android:id="@+id/league_create_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/league_create_button_create"
        android:layout_alignParentLeft="true"
        android:text="@string/league_create_checkbox_text" />

</RelativeLayout>
