<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >
    
    <TextView
        android:id="@+id/list_item_public_leagues_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/list_item_public_leagues_id_text" />

    <TextView
        android:id="@+id/list_item_public_leagues_players"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/list_item_public_leagues_players_text" />

    <TextView
        android:id="@+id/list_item_public_leagues_wager"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/list_item_public_leagues_wager_text" />

    <TextView
        android:id="@+id/list_item_public_leagues_duration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/list_item_public_leagues_duration_text" />

    <TextView
        android:id="@+id/list_item_public_leagues_pot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/list_item_public_leagues_pot_text" />
    
</LinearLayout>