<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <EditText
        android:id="@+id/register_first_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:hint="@string/register_first_name_hint" />
    
    <EditText
        android:id="@+id/register_last_name_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/register_first_name_id"
        android:hint="@string/register_last_name_hint" />
    
    <EditText
        android:id="@+id/register_email_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
		android:layout_below="@+id/register_first_name_id"
        android:ems="10"
        android:hint="@string/register_email_hint"
        tools:context=".RegisterActivity" />

    <EditText
        android:id="@+id/register_password_id"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/register_email_id"
        android:ems="10"
        android:hint="@string/register_password_hint" />
    
    <Button
        android:id="@+id/register_button_register"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_button_register" />

</RelativeLayout>
