<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    
    <TextView
        android:id="@+id/list_item_newsfeed_first_name"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_newsfeed_first_name_text" />
    
    <TextView
        android:id="@+id/list_item_newsfeed_last_name"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_newsfeed_last_name_text" />
    
    <TextView
        android:id="@+id/list_item_newsfeed_timestamp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_newsfeed_timestamp_text" />

    <TextView 
        android:id="@+id/list_item_newsfeed_message"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/list_item_newsfeed_first_name"
        android:layout_alignParentLeft="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_item_newsfeed_message_text"/>
    
</RelativeLayout>