<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WalkingFragment" >


    <Button 
        android:id="@+id/fragment_walking_start_button"
        android:layout_above="@+id/fragment_walking_stop_button"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/fragment_walking_start_button" />

	<Button 
        android:id="@+id/fragment_walking_stop_button"
        android:layout_above="@+id/fragment_walking_tv"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:text="@string/fragment_walking_stop_button" />
    
    <TextView 
        android:id="@+id/fragment_walking_tv"
        android:layout_centerInParent="true"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/fragment_walking_tv"/>
</RelativeLayout>
